WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282272
[UnifiedPDF] Null pointer dereference crash under PDFScrollingPresentationController::updateIsInWindow(bool)
https://bugs.webkit.org/show_bug.cgi?id=282272
Summary
[UnifiedPDF] Null pointer dereference crash under PDFScrollingPresentationCon...
Abrar Rahman Protyasha
Reported
2024-10-29 12:58:22 PDT
rdar://138776966
Attachments
Add attachment
proposed patch, testcase, etc.
Abrar Rahman Protyasha
Comment 1
2024-10-29 15:01:46 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35900
EWS
Comment 2
2024-10-29 17:10:58 PDT
Committed
285872@main
(ab2fff92b37e): <
https://commits.webkit.org/285872@main
> Reviewed commits have been landed. Closing PR #35900 and removing active labels.
EWS
Comment 3
2024-10-30 09:16:34 PDT
Committed
283286.385@safari-7620-branch
(3d0fd32276a4): <
https://commits.webkit.org/283286.385@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2153 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug