[UnifiedPDF] Null pointer dereference crash under PDFScrollingPresentationController::updateIsInWindow(bool) https://bugs.webkit.org/show_bug.cgi?id=282272 rdar://138776966

Reviewed by Simon Fraser.

Page activity state updates may reach the plugin, and hence calling into
UnifiedPDFPlugin::didChangeIsInWindow(), before the main thread has
created any layers. This triggers a null pointer dereference crash as it
breaks our unsaid assumption about content layer availability inside the
presentation controller.

This patch introduces an early return if the plugin receives an inWindow
update but does not have a PDFDocument.

* LayoutTests/http/tests/pdf/page-in-window-update-with-linearized-pdf-in-display-none-iframe-expected.txt: Added.
* LayoutTests/http/tests/pdf/page-in-window-update-with-linearized-pdf-in-display-none-iframe.html: Added.
* LayoutTests/platform/mac-site-isolation/TestExpectations:
* LayoutTests/platform/mac-ventura/TestExpectations:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::didChangeIsInWindow):

Canonical link: https://commits.webkit.org/285872@main